--- a/.github/workflows/update_release.yaml
+++ b/.github/workflows/update_release.yaml
@@ -14,9 +14,16 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@v1
       - run: dart pub get
-      - run: dart run build_runner build
+      - name: Build
+        run: dart run build_runner build -d
+      - name: Check git status
+        run: |
+          if [ -z "$(git status --porcelain)" ]; then
+            exit 0
+          fi
+      - run: echo NOT CLEAN -- UPDATE
       - run: dart analyze
       # - run: dart test
-      - uses: EndBug/add-and-commit@v9
-        with:
-          default_author: github_actions
+      # - uses: EndBug/add-and-commit@v9
+      #   with:
+      #     default_author: github_actions
