--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: bahai_writings
 description: A starting point for Dart libraries or applications.
-version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+version: 0.1.24+1
+repository: https://github.com/dra11y/bahai_writings_dart
 
 environment:
   sdk: ^3.4.3
@@ -20,7 +20,7 @@ dev_dependencies:
   dart_mappable_builder: ^4.2.3
   dart_style: ^2.3.6
   http: ^1.2.1
-  lints: ^3.0.0
+  lints: ^4.0.0
   path: ^1.9.0
   test: ^1.24.0
 
