--- a/.github/workflows/update_release.yaml
+++ b/.github/workflows/update_release.yaml
@@ -14,10 +14,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: autorelease
+          fetch-depth: 0
       - uses: dart-lang/setup-dart@v1
-      - run: |
-          git fetch origin main --depth 1
-          git rebase main
+      - run: git rebase main
       - run: dart pub get
       - name: Build
         run: dart run build_runner build -d
