--- a/.github/workflows/update_release.yaml
+++ b/.github/workflows/update_release.yaml
@@ -42,5 +42,4 @@ jobs:
           github_token: "${{ secrets.GITHUB_TOKEN }}"
           commit_prefix: "[AUTO]"
           commit_message: "auto update from bahai.org to ${{ steps.pubspec.outputs.new-version }}"
-          force: true
-          target_branch: autorelease
+          force: false
