--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: bahai_writings
 description: A starting point for Dart libraries or applications.
-version: 0.1.24+1
+version: 0.1.0+240525
 repository: https://github.com/dra11y/bahai_writings_dart
 
 environment:
@@ -22,6 +22,7 @@ dev_dependencies:
   http: ^1.2.1
   lints: ^4.0.0
   path: ^1.9.0
+  pubspec_manager: ^1.0.0
   test: ^1.24.0
 
 # dart pub global activate script_runner
