--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   badi_date: ^1.0.4
-  collection: any
+  collection: ^1.18.0
   dart_mappable: ^4.2.2
   diacritic: ^0.1.5
   intl: ^0.19.0
