--- a/build.yaml
+++ b/build.yaml
@@ -1,12 +1,12 @@
-targets:
-  $default:
-    builders:
-      :messages_builder:
-        enabled: true
+# targets:
+#   $default:
+#     builders:
+#       :messages_builder:
+#         enabled: true
 
-builders:
-  messages_builder:
-    import: "tool/builders/messages_builder.dart"
-    builder_factories: ["messagesBuilder"]
-    build_extensions: {"$lib$": ["src/generated/messages.g.dart"]}
-    build_to: source
+# builders:
+#   messages_builder:
+#     import: "tool/builders/messages_builder.dart"
+#     builder_factories: ["messagesBuilder"]
+#     build_extensions: {"$lib$": ["src/generated/messages.g.dart"]}
+#     build_to: source
